--- a/app_client/home/home.view.html
+++ b/app_client/home/home.view.html
@@ -1,11 +1,6 @@
-<div id="banner" class="page-header">
-<div class="row">
-<div class="col-lg-6"></div>
-<h1>{{ vm.pageHeader.title }}
-<small>{{ vm.pageHeader.strapline }}</small>
-</h1>
-</div>
-</div>
+<navigation></navigation>
+<div class="container">
+<page-header content="vm.pageHeader"></page-header>
 <div class="row">
 <div class="col-xs-12 col-sm-8">
 <label for="filter">Filter results</label>
@@ -15,11 +10,10 @@
 <div class="col-xs-12 list-group-item" ng-repeat="location in
 vm.data.locations | filter : textFilter">
 <h4>
-<a href="/location/{{ location._id }}">{{ location.name }}</a>
+<a href="#/location/{{ location._id }}">{{ location.name }}</a>
 <small class="rating-stars" rating-stars
 rating="location.rating"></small>
 <span class="badge pull-right badge-default">{{ location.distance }}</span>
-
 </h4>
 <p class="address">{{ location.address }}</p>
 <p>
@@ -33,4 +27,6 @@ rating="location.rating"></small>
 <div class="col-xs-12 col-sm-4">
 <p class="lead">{{ vm.sidebar.content }}</p>
 </div>
-</div
+</div>
+<footer-generic></footer-generic>
+</div>
