--- a/app_client/index.html
+++ b/app_client/index.html
@@ -10,7 +10,9 @@
     <script src="/angular/angular.min.js"></script>
     <script src="/lib/angular-route.min.js"></script>
     <script src="/app.js"></script>
+    <script src="/about/about.controller.js"></script>
     <script src="home/home.controller.js"></script>
+
     <script src="/common/directives/pageHeader/pageHeader.directive.js"></script>
     <script src="/common/services/locatorData.service.js"></script>
     <script src="/common/services/geolocation.service.js"></script>
