--- a/app_client/index.html
+++ b/app_client/index.html
@@ -9,15 +9,18 @@
   <body ng-view>
     <script src="/angular/angular.min.js"></script>
     <script src="/lib/angular-route.min.js"></script>
+    <script src="/lib/angular-sanitize.min.js"></script>
     <script src="/app.js"></script>
     <script src="/about/about.controller.js"></script>
-    <script src="home/home.controller.js"></script>
-
+    <script src="/home/home.controller.js"></script>
+    <script src="/locationDetail/locationDetail.controller.js"></script>
+    
     <script src="/common/directives/pageHeader/pageHeader.directive.js"></script>
     <script src="/common/services/locatorData.service.js"></script>
     <script src="/common/services/geolocation.service.js"></script>
     <script src="/common/directives/ratingStars/ratingStars.directive.js"></script>
     <script src="/common/filters/formatDistance.filter.js"></script>
+    <script src="/common/filters/addHtmlLineBreaks.filter.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
     <script src="/common/directives/footerGeneric/footerGeneric.directive.js"></script>
     <script src="https://code.jquery.com/jquery-1.x-git.min.js"></script>
