--- a/app_client/reviewModal/reviewModal.view.html
+++ b/app_client/reviewModal/reviewModal.view.html
@@ -3,8 +3,7 @@
 <div class="modal-header">
 <button type="button" ng-click="vm.modal.cancel()" class="close"><span
 aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-<h4 id="myModalLabel" class="modal-title">Add your review for {{
-locationData.locationName }}</h4>
+<h4 id="myModalLabel" class="modal-title">Add your review </h4>
 </div>
 <div class="modal-body">
 <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{
