--- a/app_client/reviewModal/reviewModal.view.html
+++ b/app_client/reviewModal/reviewModal.view.html
@@ -15,11 +15,9 @@ vm.formError }}</div>
 </div>
 </div>
 <div class="form-group">
-<label for="rating" class="col-xs-10 col-sm-2 control-label">Rating</
-label>
+<label for="rating" class="col-xs-10 col-sm-2 control-label">Rating</label>
 <div class="col-xs-12 col-sm-2">
-<select id="rating" name="rating" ng-model="vm.formData.rating"
-class="form-control input-sm">
+<select id="rating" name="rating" ng-model="vm.formData.rating" class="form-control input-sm">
 <option>5</option>
 <option>4</option>
 <option>3</option>
