--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -44,7 +44,7 @@ time.closing }}</span>
 <h2 class="panel-title">Location map</h2>
 </div>
 <div class="panel-body">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5503033.22201269!2d71.3594387490299!3d31.948872255026103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38db52d2f8fd751f%3A0x46b7a1f7e614925c!2sPakistan!5e0!3m2!1sen!2s!4v1488214439769"  width="350" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5503033.22201269!2d71.3594387490299!3d31.948872255026103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38db52d2f8fd751f%3A0x46b7a1f7e614925c!2sPakistan!5e0!3m2!1sen!2s!4v1488214439769"  width="350" height="400" frameborder="0" style="border:0" ></iframe>
 
 
 
