--- a/app_client/index.html
+++ b/app_client/index.html
@@ -23,7 +23,7 @@
     
     <script src="/common/services/geolocation.service.js"></script>
     <script src="/common/directives/ratingStars/ratingStars.directive.js"></script>
-    <script src="/common/filters/formatDistance.filter.js"></script>
+    <script src='/common/filters/formatDistance.filter.js'></script>
     <script src="/common/filters/addHtmlLineBreaks.filter.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
     <script src="/common/directives/footerGeneric/footerGeneric.directive.js"></script>
