--- a/app_client/index.html
+++ b/app_client/index.html
@@ -15,7 +15,10 @@
     <script src="/about/about.controller.js"></script>
     <script src="/home/home.controller.js"></script>
     <script src="/locationDetail/locationDetail.controller.js"></script>
+    <script src="/common/services/authentication.service.js"></script>
     <script src="/common/services/locatorData.service.js"></script>
+    <script src="/auth/register/register.controller.js"></script>
+    <script src="/auth/login/login.controller.js"></script>
     <script src="/lib/ui-bootstrap-custom-2.5.0.min.js"></script>
     <script src="/lib/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>
     <script src="/reviewModal/reviewModal.controller.js"></script>
