--- a/app_client/auth/login/login.view.html
+++ b/app_client/auth/login/login.view.html
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col-md-6 col-sm-8">
 			<p class="lead">
-				Not a member? Please <a href="/#register?page={{vm.returnPage }}">register</a> first.
+				Not a member? Please <a href="/register?page={{vm.returnPage }}">register</a> first.
 			</p>
 			<form ng-submit="vm.onSubmit()">
 				<div role="alert" ng-show="vm.formError" class="alert alert-danger">
