--- a/app_client/index.html
+++ b/app_client/index.html
@@ -14,7 +14,9 @@
     <script src="/app.js"></script>
     <script src="/about/about.controller.js"></script>
     <script src="/home/home.controller.js"></script>
+    <script src="/common/services/authentication.service.js"></script>
     <script src="/locationDetail/locationDetail.controller.js"></script>
+
     <script src="/common/services/authentication.service.js"></script>
     <script src="/common/services/locatorData.service.js"></script>
     <script src="/auth/register/register.controller.js"></script>
@@ -29,6 +31,7 @@
     <script src='/common/filters/formatDistance.filter.js'></script>
     <script src="/common/filters/addHtmlLineBreaks.filter.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
+    <script src="/common/directives/navigation/navigation.controller.js"></script>
     <script src="/common/directives/footerGeneric/footerGeneric.directive.js"></script>
     <script src="https://code.jquery.com/jquery-1.x-git.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
