--- a/app_client/locationDetail/locationDetail.view.html
+++ b/app_client/locationDetail/locationDetail.view.html
@@ -55,7 +55,8 @@ time.closing }}</span>
 <div class="row">
 <div class="col-xs-12">
 <div class="panel panel-primary review-panel">
-<div class="panel-heading"><a ng-click="vm.popupReviewForm()" class="btn btn-default pullright">Add review</a>
+<div class="panel-heading"><a ng-show="vm.isLoggedIn" ng-click="vm.popupReviewForm()" class="btn btn-default pullright">Add review</a>
+<a ng-hide="vm.isLoggedIn" href="/login?page={{ vm.currentPath }}" class="btn btn-default pull-right">Login to add review</a>
 <h2 class="panel-title">Customer reviews 
 </h2>
 </div>
